fah-control-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: folding-at-home-control-service
  namespace: folding-at-home
spec:
  type: NodePort
  selector:
    app: folding-at-home
  ports:
    - port: 36330
      targetPort: 36330
      nodePort: 30330
