fah-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: folding-at-home-ui-service
  namespace: folding-at-home
spec:
  type: NodePort
  selector:
    app: folding-at-home
  ports:
    - port: 7396
      targetPort: 7396
      nodePort: 30396
